<resources>
    <string name="app_name">RxJava2-Android-Samples</string>
    <string name="doSomeWork">doSomeWork</string>
    <string name="operators">Operators</string>
    <string name="subjects">Subjects</string>
    <string name="creating">Creating</string>
    <string name="transforming">Transforming</string>
    <string name="filtering">Filtering</string>
    <string name="combining">Combining</string>
    <string name="errorHanding">ErrorHanding</string>
    <string name="utility">Utility</string>
    <string name="conditionalAndBoolean">ConditionalAndBoolean</string>
    <string name="mathematicalAndAggregate">MathematicalAndAggregate</string>
    <string name="converting">Converting</string>
    <string name="connectable">Connectable</string>
    <string name="backpressure">Backpressure</string>

    <string name="networking">Networking</string>
    <string name="pagination">Pagination</string>

    <!--Creating-->
    <string name="create">Create</string>
    <string name="empty_never_throw">Empty/Never/Throw</string>
    <string name="from">From</string>
    <string name="interval">Interval</string>
    <string name="just">Just</string>
    <string name="range">Range</string>
    <string name="repeat">Repeat</string>
    <string name="start">Start</string>
    <string name="timer">Timer</string>

    <!--Transforming-->
    <string name="buffer">Buffer</string>
    <string name="flat_map">flatMap</string>
    <string name="group_by">groupBy</string>
    <string name="map">Map</string>
    <string name="scan">Scan</string>
    <string name="window">Window</string>

    <!--Filtering-->
    <string name="debounce">Debounce</string>
    <string name="distinct">Distinct</string>
    <string name="element_at">ElementAt</string>
    <string name="filter">Filter</string>
    <string name="first">First</string>
    <string name="ignore_elements">IgnoreElements</string>
    <string name="last">Last</string>
    <string name="sample">Sample</string>
    <string name="skip">Skip</string>
    <string name="skip_last">SkipLast</string>
    <string name="take">Take</string>
    <string name="take_last">TakeLast</string>

    <!--Combining-->
    <string name="and_then_when">AndThenWhen</string>
    <string name="combine_latest">CombineLatest</string>
    <string name="join">Join</string>
    <string name="merge">Merge</string>
    <string name="start_with">StartWith</string>
    <string name="switch_fun">Switch</string>
    <string name="zip">Zip</string>

    <!--Error Handling-->
    <string name="catch_fun">Catch</string>
    <string name="retry">Retry</string>

    <!--Converting-->
    <string name="to">To</string>

    <!--Utility-->
    <string name="delay">Delay</string>
    <string name="do_fun">Do</string>
    <string name="materialize_dematerialize">Materialize/Dematerialize</string>
    <string name="observe_on">ObserveOn</string>
    <string name="serialize">Serialize</string>
    <string name="subscribe">Subscribe</string>
    <string name="time_interval">TimeInterval</string>
    <string name="timeout">Timeout</string>
    <string name="timestamp">Timestamp</string>
    <string name="using">Using</string>

    <!--Conditional And Boolean-->
    <string name="all">All</string>
    <string name="amb">Amb</string>
    <string name="contains">Contains</string>
    <string name="default_if_empty">DefaultIfEmpty</string>
    <string name="sequence_equal">SequenceEqual</string>
    <string name="skip_until">SkipUntil</string>
    <string name="skip_while">SkipWhile</string>
    <string name="take_until">TakeUntil</string>
    <string name="take_while">TakeWhile</string>

    <!--Mathematical And Aggregate-->
    <string name="average">Average</string>
    <string name="concat">Concat</string>
    <string name="count">Count</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="reduce">Reduce</string>
    <string name="sum">Sum</string>


    <string name="disposable">Disposable</string>
    <string name="SingleObserver">SingleObserver</string>
    <string name="CompletableObserver">CompletableObserver</string>
    <string name="Flowable">Flowable</string>
    <string name="replay">Replay</string>
    <string name="defer">Defer</string>
    <string name="replay_subject">ReplaySubject</string>
    <string name="publish_subject">PublishSubject</string>
    <string name="behavior_subject">BehaviorSubject</string>
    <string name="async_subject">AsyncSubject</string>
    <string name="throttle_last">ThrottleLast</string>
    <string name="throttle_first">ThrottleFirst</string>
    <string name="flatMapAndFilter">flatMapAndFilter</string>
    <string name="flatMapWithZip">flatMapWithZip</string>
    <string name="click_me">Click Me</string>
    <string name="rx_bus">RxBus</string>
    <string name="compose">Compose for reusable</string>
</resources>
