<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rxjava2.android.samples.ui.operators.OperatorsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startDebounceActivity"
            android:text="@string/debounce"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startDistinctActivity"
            android:text="@string/distinct"
            android:textColor="@android:color/black" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startElementAtActivity"
            android:text="@string/element_at"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFilterActivity"
            android:text="@string/filter"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFirstActivity"
            android:text="@string/first"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startIgnoreElementsActivity"
            android:text="@string/ignore_elements"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startLastActivity"
            android:text="@string/last"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSampleActivity"
            android:text="@string/sample"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSkipActivity"
            android:text="@string/skip"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSkipLastActivity"
            android:text="@string/skip_last"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startTakeActivity"
            android:text="@string/take"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startTakeLastActivity"
            android:text="@string/take_last"
            android:textColor="@android:color/black" />

    </LinearLayout>
</ScrollView>
