<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rxjava2.android.samples.ui.operators.OperatorsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startBufferActivity"
            android:text="@string/buffer"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFlatMapActivity"
            android:text="@string/flat_map"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startGroupByActivity"
            android:text="@string/group_by"
            android:textColor="@android:color/black" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startMapActivity"
            android:text="@string/map"
            android:textColor="@android:color/black" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startScanActivity"
            android:text="@string/scan"
            android:textColor="@android:color/black" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startWindowActivity"
            android:text="@string/window"
            android:textColor="@android:color/black" />

    </LinearLayout>
</ScrollView>
